<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Datalogger</string>
    
    <string name="title">Datalogger control</string>
    
    <string name="status_prefix">Status:</string>
    <string name="status_running">Running</string>
    <string name="status_not_running">Not running</string>
    
    <string name="toggle_text">Toggle</string>
    
    <string name="lbl_things_to_log">Log:</string>
    
    <string name="lbl_acc">Accelerometer:</string>
    <string name="lbl_gps">GPS:</string>
    

</resources>