<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/Spacer1"
            android:layout_width="fill_parent"
            android:layout_height="30dp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbl_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.55"
            android:gravity="center_horizontal|left"
            android:text="@string/status_prefix"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_text" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/spacer2"
            android:layout_width="fill_parent"
            android:layout_height="30dp" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbl_things_to_log"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.55"
            android:gravity="center_horizontal|left"
            android:text="@string/lbl_things_to_log"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/lbl_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_acc" />

        <CheckBox
            android:id="@+id/chkbox_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbl_somethingelse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_acc" />

        <CheckBox
            android:id="@+id/chkbox_somethingelse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

</TableLayout>